[gd_scene load_steps=15 format=2]

[ext_resource path="res://valgrind panic/script/Main.gd" type="Script" id=1]
[ext_resource path="res://valgrind panic/Prefabs/Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://valgrind panic/Prefabs/Base.tscn" type="PackedScene" id=3]
[ext_resource path="res://valgrind panic/Prefabs/canon/canon_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://valgrind panic/Prefabs/spawnTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://valgrind panic/Prefabs/canon/canon_2.tscn" type="PackedScene" id=6]
[ext_resource path="res://valgrind panic/Prefabs/canon/canon_3.tscn" type="PackedScene" id=7]
[ext_resource path="res://valgrind panic/valgrind_panic.mp3" type="AudioStream" id=8]
[ext_resource path="res://valgrind panic/Prefabs/Background.tscn" type="PackedScene" id=9]
[ext_resource path="res://valgrind panic/Prefabs/ennemis/ClassicBug.tscn" type="PackedScene" id=10]
[ext_resource path="res://valgrind panic/Prefabs/ennemis/FatOne.tscn" type="PackedScene" id=11]
[ext_resource path="res://Light/NeonWorld.tres" type="Environment" id=12]
[ext_resource path="res://valgrind panic/Prefabs/WorldColor.gd" type="Script" id=13]

[sub_resource type="GDScript" id=1]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]

[node name="Base" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.8, 0.8 )
script = SubResource( 1 )

[node name="spawnTimer" parent="." instance=ExtResource( 5 )]
wait_time = 0.001
one_shot = true

[node name="canon_1" parent="." instance=ExtResource( 4 )]
position = Vector2( 807, 628 )

[node name="canon_2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1119, 597 )

[node name="canon_3" parent="." instance=ExtResource( 7 )]
position = Vector2( 962, 367 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 24.0

[node name="BackGround" parent="." instance=ExtResource( 9 )]
position = Vector2( 959.5, 508 )
scale = Vector2( 1.57266, 0.9875 )

[node name="ClassicBug" parent="." instance=ExtResource( 10 )]
position = Vector2( 266, 405 )

[node name="FatOne" parent="." instance=ExtResource( 11 )]
position = Vector2( 280, 701 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 12 )
script = ExtResource( 13 )
